--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "tailwind-merge": "^2.4.0",
+    "vaul": "^0.9.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
