--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
+    "react-router-dom": "^6.26.0",
     "tailwind-merge": "^2.4.0",
     "vaul": "^0.9.1",
     "zustand": "^4.5.4"
