feat: migrate db to postgres

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
 # App
 HOST=
 PORT=
+JWT_SECRET=supersecretkey
 
 # Database
-DATABASE_PATH=
+DATABASE_PATH=postgres://postgres:postgres@127.0.0.1:5432/github_leaderboard
 
-# Auth
+# Github API
 GITHUB_CLIENT_ID=
 GITHUB_SECRET_KEY=
-JWT_SECRET=supersecretkey
+GITHUB_DEFAULT_TOKEN=
 
 # Queue Worker
 QUEUE_CONCURRENCY=1
